# sequrity-api

./: .gitignore  LICENSE  README.md  claude.md  justfile  latest  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: ci.yml  docs.yml  release.yml
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2/control/examples/: index.html
0.0.2/control/learn/: index.html
0.0.2/control/reference/: index.html
0.0.2/installation/: index.html
0.0.2/release_notes/: index.html
0.0.2/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/control/examples/: index.html
0.3.0/control/learn/: index.html
0.3.0/control/reference/: index.html
0.3.0/installation/: index.html
0.3.0/release_notes/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0.post1/: 404.html  index.html  sitemap.xml
0.4.0.post1/control/examples/: index.html
0.4.0.post1/control/learn/: index.html
0.4.0.post1/control/reference/: index.html
0.4.0.post1/installation/: index.html
0.4.0.post1/release_notes/: index.html
0.4.0.post2/: 404.html  index.html  sitemap.xml
0.4.0.post2/control/examples/: index.html
0.4.0.post2/control/learn/: index.html
0.4.0.post2/control/reference/: index.html
0.4.0.post2/installation/: index.html
0.4.0.post2/release_notes/: index.html
0.4.0.post2/search/: search_index.json
0.4.0/control/examples/: index.html
0.4.0/control/learn/: index.html
0.4.0/control/reference/: index.html
0.4.0/installation/: index.html
0.4.0/release_notes/: index.html
0.4.0/search/: search_index.json
0.4.1/: 404.html  index.html  objects.inv  sitemap.xml
0.4.1/control/examples/: index.html
0.4.1/control/learn/: index.html
0.4.1/control/reference/: index.html
0.4.1/installation/: index.html
0.4.1/release_notes/: index.html
0.4.2/: 404.html  index.html  sitemap.xml
0.4.2/control/examples/: index.html
0.4.2/control/learn/: index.html
0.4.2/control/reference/: index.html
0.4.2/installation/: index.html
0.4.2/release_notes/: index.html
0.4.2/stylesheets/: custom.css
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/control/examples/: index.html
dev/control/learn/: index.html
dev/control/reference/: index.html
dev/installation/: index.html
dev/release_notes/: index.html
dev/search/: search_index.json
docs/: index.md  installation.md  release_notes.md
docs/control/: getting_started.md  sequrity_client.md
docs/control/examples/: advanced_sqrt_examples.md  advanced_sqrt_examples_2026-01-25.md  control-release-examples-overview.md  control-release-examples.ipynb  index.md  langgraph_integration.md  openai_sdk_integration.md
docs/control/getting_started/: custom_headers.md  first_message.md  langgraph.md  tool_use_dual_llm.md
docs/control/learn/: index.md  session_id.md  single-vs-dual-llm.md
docs/control/reference/: bearer-token-only-vs-headers-mode.md  index.md  rest_api.md  single_llm_vs_dual_llm_features.md
docs/general/: sequrity_client.md
docs/general/rest_api/: service_provider.md
docs/general/sequrity_client/: sequrity_client.md  service_provider.md
docs/stylesheets/: custom.css
examples/control/advanced_sqrt_examples/: notebook.ipynb  rest_api.py  sequrity_client.py
examples/control/getting_started/: rest_api.sh  sequrity_client.py
examples/control/integrations/: langgraph_basic.py  openai_agents_sdk_basic.py
examples/control/learn_sqrt/: basic_types.py  metadata.py  predicates.py  set_operations.py  tool_policies.py
examples/control/release-examples/: control-release-examples-rest-api.py  control-release-examples-sequrity-client.py  control-release-examples.py
scripts/: run_examples.sh
src/sequrity/: __init__.py  _client.py  _config.py  _constants.py  _exceptions.py  _sentinel.py  _transport.py  client.py  constants.py
src/sequrity/control/: __init__.py  _client.py  _config.py  _constants.py  _stream.py  _transport.py  chat_completion.py  wrapper.py
src/sequrity/integrations/: __init__.py  (+3 more)
src/sequrity_api/: __init__.py  _version.py  client.py  constants.py  service_provider.py
src/sequrity_api_unittest/: config.py
src/sequrity_unittest/: config.py
test/control/: test_chat_completion.py  test_header_overrides.py  test_headers.py  test_langgraph.py  test_message.py  test_parser.py  test_policy_gen.py  test_responses.py  test_streaming.py
test/integrations/: test_langgraph_integration.py  test_openai_adk.py  test_openai_agents_sdk.py
(+455 files in other folders)
