[project]
    name="sequrity-api"
    version="0.0.1"
    description="A Python client for Sequrity API"
    readme="README.md"
    authors=[
        { name="Ilya Shumailov", email="ilya@sequrity.ai" },
        { name="Yiren Zhao", email="a.zhao@imperial.ac.uk" },
        { name="Cheng Zhang", email="chengzhang98@outlook.com" },
    ]
    requires-python=">=3.13"
    dependencies=["httpx>=0.28.1", "pydantic>=2.11.9"]

[build-system]
    requires=["uv_build>=0.8.11,<0.9.0"]
    build-backend="uv_build"

[dependency-groups]
    dev=["openai>=1.107.3", "pytest>=9.0.2"]

[tool.ruff]
    line-length=120


[tool.pytest.ini_options]
    minversion="9.0"
    testpaths=["test"]
