[project]
    name="sequrity"
    description="A Python client for Sequrity API"
    readme="README.md"
    license="Apache-2.0"
    authors=[
        { name="Ilya Shumailov", email="ilya@sequrity.ai" },
        { name="Yiren Zhao", email="yiren@sequrity.ai" },
        { name="Cheng Zhang", email="cheng@sequrity.ai" },
    ]
    requires-python=">=3.11"
    dependencies=[
        "httpx>=0.28.1",
        "langchain-openai>=1.1.7",
        "langgraph>=1.0.7",
        "lark>=1.3.1",
        "openai>=1.0.0",
        "pydantic>=2.11.9",
    ]
    dynamic=["version"]
    classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]

    [project.urls]
        Homepage="https://sequrity.ai"
        Repository="https://github.com/sequrity-ai/sequrity-api"

[build-system]
    requires=["hatchling", "hatch-vcs"]
    build-backend="hatchling.build"

[tool.hatch.version]
    source="vcs"

[tool.hatch.build.hooks.vcs]
    version-file="src/sequrity/_version.py"

[dependency-groups]
    dev=["openai>=1.107.3", "pytest>=9.0.2", "pytest-asyncio>=0.24.0", "ruff>=0.14.13", "ty"]
    langgraph=["langgraph>=1.0.6"]
    agents=["openai-agents>=0.1.0"]
    docs=["griffe-pydantic>=1.2.0", "mike>=2.1", "mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.28"]
    examples=["ipykernel<7.0.0", "rich>=14.2.0"]

[tool.ruff]
    line-length=120
    exclude=[".venv", "examples"]

[tool.pytest.ini_options]
    minversion="9.0"
    testpaths=["test"]

[tool.ty]
    # ty type checker configuration

    [tool.ty.rules]
        # Ignore unresolved imports for optional dependencies
        unresolved-import="ignore"
